--- a/angular/src/app/main/TasksCheckList/edit-task/edit-task.component.css
+++ b/angular/src/app/main/TasksCheckList/edit-task/edit-task.component.css
@@ -29,3 +29,9 @@
 .giveCommentView {
     margin-top: 20px;
 }
+.drop_down_class {
+    width: 175px;
+}
+.drop_down_arrow {
+    margin-left: 135px;
+}
