--- a/angular/src/app/main/TasksCheckList/create-or-edit-task/create-or-edit-task.component.html
+++ b/angular/src/app/main/TasksCheckList/create-or-edit-task/create-or-edit-task.component.html
@@ -171,7 +171,7 @@
 
                             <div class="drag_drop_box">
                                 <label>Attachments</label>
-                                <ng-uppy [config]="settings" (onFileUpload)="onFileUpload($event)"></ng-uppy>
+                                <ng-uppy [config]="settings" (uploadResult) = "fileUploadedResponse($event)"></ng-uppy>
                             </div>
                         </div>
                     </div>
