Management Crud Completed, Angular Route Fixes, Bugs fix

--- a/angular/src/app/main/TasksCheckList/create-or-edit-task/create-or-edit-task.component.html
+++ b/angular/src/app/main/TasksCheckList/create-or-edit-task/create-or-edit-task.component.html
@@ -29,7 +29,7 @@
                                             <form class="container">
                                                 <input [(ngModel)]="checklist.closingMonth" autocomplete="off"
                                                     class="form-control" name="date" bsDatepicker
-                                                    [bsConfig]="{dateInputFormat: 'MM/YYYY'}"
+                                                    [bsConfig]="{dateInputFormat: 'MMM/YYYY'}"
                                                     (onShown)="onOpenCalendar($event)">
                                             </form>
                                         </div>
