--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -1,4 +1,4 @@
-<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
+<div *ngIf="active" class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
     <div class="row">
         <div class="col-lg-12">
@@ -10,7 +10,7 @@
                         </h3>
                     </div>
                     <div class="kt-portlet__head-toolbar">
-                        <a href="javascript: void(0);" (click)="BackToTaskList()">
+                        <a href="javascript: void(0);" >
                             <i class="la la-arrow-left"></i>
                             Back
                         </a>
@@ -29,7 +29,7 @@
                                                 {{item.name}}
                                             </option>
                                             <div class="divider dropdown-divider"></div>
-                                            <a class="dropdown-item" href="" (click)="addNew()">Addnew</a>
+                                            <a class="dropdown-item" href="" >Addnew</a>
                                         
                                             <!-- <option>
                                             <button (click)="addNew()" type="button">Addnew</button>
@@ -44,7 +44,7 @@
                                         <label for="dateOfBirth">Closing Month</label>
                                         <div class="form-group">
                                             <form class="container">
-                                                <input [(ngModel)]="getTaskForEdit.closingMonth._d" class="form-control" name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}" (onShown)="onOpenCalendar($event)">
+                                                <input [(ngModel)]="getTaskForEdit.closingMonth._d" class="form-control" name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}">
                                                 </form>
                                         </div>
                                     </div> 
@@ -220,7 +220,7 @@
                                     <div class="form-group">
                                         <label>Ends on</label>
                                         <form class="container">
-                                            <input [(ngModel)]="getTaskForEdit.endsOn._d" autocomplete="off" class="form-control" name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}" (onShown)="onOpenCalendar($event)">
+                                            <input [(ngModel)]="getTaskForEdit.endsOn._d" autocomplete="off" class="form-control" name="date" bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}">
                                             </form>
                                     </div>
                                     <div class="kt-radio-list eom-radio">
@@ -237,7 +237,7 @@
                             </div>
                             <div class="drag_drop_box" >
                                 <label>Attachments</label>
-                            <ng-uppy [config]="settings" (onFileUpload)="onFileUpload($event)"></ng-uppy>
+                            <ng-uppy [config]="settings" ></ng-uppy>
                         </div>
                         </div>
                     </div>
