again remove tagify and other bugs fixes

--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -45,8 +45,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-5">
-                                    <select class="form-control input-medium"
-                                        (change)="closingMonthSelect($event.target.value)">
+                                    <select class="form-control input-medium">
                                         <option value="January">Comments</option>
                                         <option value="Febuary">History</option>
                                     </select>
@@ -116,7 +115,7 @@
                                 </div>
                                 <div class="col-md-4">
                                     <a class="btn" href="javascript:;"
-                                                    (click)="deleteTask(taskDetailObject.id)">
+                                                    (click)="deleteTask()">
                                                     <i class="fa fa-trash" style="color: #5867dd;"></i></a>
                                     <!-- <i class="fa fa-trash" style="color: #5867dd;"></i> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
                                     <i class="fas fa-edit" (click)="RedirectToEditTaskPage()"
@@ -129,7 +128,7 @@
                                 <div class="col-md-12">
                                     <div class="drag_drop_box">
                                         <label>Attachments</label>
-                                        <ng-uppy [config]="settings" (onFileUpload)="onFileUpload($event)"></ng-uppy>
+                                        <ng-uppy [config]="settings" ></ng-uppy>
                                     </div>
                                 </div>
 
