--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -1,4 +1,4 @@
-<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
+<div *ngIf="active" class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
     <div class="row">
         <div class="col-lg-12">
@@ -10,7 +10,7 @@
                         </h3>
                     </div>
                     <div class="kt-portlet__head-toolbar">
-                        <a href="javascript: void(0);" (click)="BackToTaskList()">
+                        <a href="javascript: void(0);">
                             <i class="la la-arrow-left"></i>
                             Back
                         </a>
@@ -192,7 +192,7 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label>No of Months</label>
-                                        <input type="text" name="noOfMonths" class="form-control bsDatepicker" [(ngModel)]="getTaskForEdit.noOfMonths" [disabled]="enableValue == true">
+                                        <input type="text" name="noOfMonths" class="form-control bsDatepicker" [(ngModel)]="getTaskForEdit.noOfMonths">
                                     </div>
                                     <div class="form-group">
                                         <label>Days Before</label>
@@ -211,8 +211,7 @@
                                         <label>Ends on</label>
                                         <form class="container">
                                             <input [(ngModel)]="getTaskForEdit.endsOn._d" autocomplete="off" class="form-control" name="date" 
-                                            bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}" (onShown)="onOpenCalendar($event)"
-                                            >
+                                            bsDatepicker [bsConfig]="{dateInputFormat: 'MM/YYYY'}">
                                             </form>
                                     </div>
                                     <div class="kt-radio-list eom-radio">
@@ -229,7 +228,7 @@
                             </div>
                             <div class="drag_drop_box" >
                                 <label>Attachments</label>
-                            <ng-uppy [config]="settings" (onFileUpload)="onFileUpload($event)"></ng-uppy>
+                            <ng-uppy [config]="settings"></ng-uppy>
                         </div>
                         </div>
                     </div>
