--- a/angular/src/app/admin/management/management.component.css
+++ b/angular/src/app/admin/management/management.component.css
@@ -138,3 +138,19 @@
   .filterModal h5{
     margin-bottom:10px
   }
+
+  .management-table .ui-table .ui-table-tbody > tr:nth-child(even),
+.management-table .ui-table .ui-table-tbody > tr:nth-child(odd) {
+    background-color: transparent;
+    border-bottom: 1px solid #f1f1f1;
+}
+
+.primeng-paging-container {
+    padding-top: 15px;
+}
+.primeng-paging-container .ui-paginator{
+    text-align: left !important;
+}
+.primeng-paging-container .total-records-count{
+    float: right;
+}
