--- a/angular/src/app/main/checklist/create-or-edit-task/create-or-edit-task.component.html
+++ b/angular/src/app/main/checklist/create-or-edit-task/create-or-edit-task.component.html
@@ -9,7 +9,7 @@
                         </h3>
                     </div>
                     <div class="kt-portlet__head-toolbar">
-                        <a href="javascript: void(0);" (click)="BackToTaskList()">
+                        <a href="javascript: void(0);" (click)="backToTaskList()">
                             <i class="la la-arrow-left"></i>
                             Back
                         </a>
