--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -111,7 +111,7 @@
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text">
                                                     <label class="kt-radio kt-radio--single kt-radio--success">
-                                                        <input type="radio" name="radioButton">
+                                                        <input type="radio" name="radioButton" [(checked)]="isChecked">
                                                         <span></span>
                                                     </label>
                                                 </span>
@@ -122,6 +122,33 @@
                                                 <option value="2">2</option>
                                                 <option value="3">3</option>
                                                 <option value="4">4</option>
+                                                <option value="5">5</option>
+                                                <option value="6">6</option>
+                                                <option value="7">7</option>
+                                                <option value="8">8</option>
+                                                <option value="9">9</option>
+                                                <option value="10">10</option>
+
+                                                <option value="11">11</option>
+                                                <option value="12">12</option>
+                                                <option value="13">13</option>
+                                                <option value="14">14</option>
+                                                <option value="15">15</option>
+                                                <option value="16">16</option>
+                                                <option value="17">17</option>
+                                                <option value="18">18</option>
+                                                <option value="19">19</option>
+                                                <option value="20">20</option>
+                                                <option value="21">21</option>
+                                                <option value="22">22</option>
+                                                <option value="23">23</option>
+                                                <option value="24">24</option>
+                                                <option value="25">25</option>
+                                                <option value="26">26</option>
+                                                <option value="27">27</option>
+                                                <option value="28">28</option>
+                                                <option value="29">29</option>
+                                                <option value="30">30</option>
 
                                             </select>
                                         </div>
@@ -148,8 +175,8 @@
                                     <div class="form-group">
                                         <label>Ends on</label>
                                         <form class="container">
-                                            <input [(ngModel)]="checklist.endsOn" [disabled]="endOnIsEnabled == false" autocomplete="off"
-                                                class="form-control" name="date" bsDatepicker
+                                            <input [(ngModel)]="checklist.endsOn" [disabled]="endOnIsEnabled == false"
+                                                autocomplete="off" class="form-control" name="date" bsDatepicker
                                                 [bsConfig]="{dateInputFormat: 'MM/YYYY'}"
                                                 (onShown)="onOpenCalendar($event)">
                                         </form>
@@ -158,8 +185,8 @@
                                         <span></span>
                                         <label class="kt-radio kt-radio--brand" name="radio5">
                                             <input type="radio" value="true" name="radioButton"
-                                                (change)="handleRadioChange()"
-                                                [(ngModel)]="checklist.endOfMonth">End of month
+                                                (change)="handleRadioChange()" [(ngModel)]="checklist.endOfMonth">End of
+                                            month
                                             <span></span>
                                         </label>
                                     </div>
@@ -171,7 +198,7 @@
 
                             <div class="drag_drop_box">
                                 <label>Attachments</label>
-                                <ng-uppy [config]="settings" (uploadResult) = "fileUploadedResponse($event)"></ng-uppy>
+                                <ng-uppy [config]="settings" (uploadResult)="fileUploadedResponse($event)"></ng-uppy>
                             </div>
                         </div>
                     </div>
